--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     
                     
                     <div class="card-row">          
-                      <div class="card text-white bg-info mb-3" style="max-width: 25rem;">
+                      <div class="card text-white bg-info mb-3" style="max-width: 25rem; max-height: 60rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Info card title</h5>
