--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       
                       
               <div class="card-row">          
-                      <div class="card text-white bg-warning mb-3" style="max-width: 60rem;">
+                      <div class="card text-white bg-danger mb-3" style="max-width: 60rem;">
                 <div class="card-header">Header</div>
                 <div class="card-body">
                   <h5 class="card-title">Info card title</h5>
