--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
               </div>
             </div >
-            <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12 raza" src="C:\Users\RAZA\Desktop\p.jpeg" alt="step">
+            <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12 raza" src="p.jpeg" alt="step">
           </div>
         </div>
       </section>
