--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@ nav ul li.btn.hide i:before{
   <body>
     <nav>
       <ul>
-<li class="logo">CodingNepal</li>
+<li class="logo">C Programming</li>
 <li class="items"><a href="#">Home</a></li>
 <li class="items"><a href="#">About</a></li>
-<li class="items"><a href="#">Blogs</a></li>
 <li class="items"><a href="#">Contact</a></li>
 <li class="items"><a href="#">Feedback</a></li>
 <li class="btn"><a href="#"><i class="fas fa-bars"></i></a></li>
