--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+
   <head>
     <meta charset="utf-8">
     <style>
@@ -99,8 +99,7 @@ nav ul li.btn.hide i:before{
 }
 
     </style>
-    <title>Responsive Navigation Bar</title>
-    <link rel="stylesheet" href="style.css">
+    <title>website</title>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
