--- a/indexmain.html
+++ b/indexmain.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> ABDUL RAZA SHAIKH </h1>
-<a href="index.md">Click here</a>
+<a href="index1.md">Click here</a>
 </body>
 </html>
