--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1> ABDUL RAZA SHAIKH </h1>
-<a href="index1.md">Click here</a>
+<a href="file1.md">Click here</a>
 </body>
 </html>
