--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title> Java Program
 </title>
 </head>
-<body>
+<body bgcolor=voilet text=darkgreen>
 <h1> ABDUL RAZA SHAIKH </h1>
-<a href="file1.md">Click here</a>
+  <a href="file1.md"><b>Click here</b></a>
 </body>
 </html>
