--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title> Java Program
 </title>
 </head>
-<body bgcolor=voilet text=darkgreen>
+<body bgcolor=lightblue text=darkgreen>
 <h1> ABDUL RAZA SHAIKH </h1>
   <a href="file1.md"><b>Click here</b></a>
 </body>
