--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body bgcolor=lightblue text=darkgreen>
 <h1> ABDUL RAZA SHAIKH </h1>
-  <a href="raza1.pdf"><b>Click here</b></a>
+  <a href="Quiz.java"><b>Click here</b></a>
 </body>
 </html>
