--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body bgcolor=lightblue text=darkgreen>
 <h1> ABDUL RAZA SHAIKH </h1>
-  <a href="file1.md"><b>Click here</b></a>
+  <a href="IF_ELSE_STATEMENT.ipynb"><b>Click here</b></a>
 </body>
 </html>
