--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ body {margin:0;}
   <a class="active" href="#home">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
+    <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+    <a href="#news">News</a>
+  <a href="#contact">Contact</a>
 </div>
 
 <div style="padding-left:16px">
