--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body {margin:0;}
 
 
 <div class="sticky"><div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="#Home"><i class="fa fa-fw fa-home"></i>Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
     <a href="#news">News</a>
