--- a/index.html
+++ b/index.html
@@ -22,23 +22,54 @@ body {margin:0;}
   background-color: #cae8ca;
 }
 
-.topnav a {
-  float: left;
+.sidebar {
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+  position: fixed;
+  height: 100%;
+  overflow: auto;
+}
+
+.sidebar a {
   display: block;
   color: black;
-  text-align: center;
-  padding: 14px 16px;
+  padding: 16px;
   text-decoration: none;
-  font-size: 17px;
-  border-bottom: 3px solid transparent;
+}
+ 
+.sidebar a.active {
+  background-color: #4CAF50;
+  color: white;
 }
 
-.topnav a:hover {
-  border-bottom: 3px solid red;
+.sidebar a:hover:not(.active) {
+  background-color: #555;
+  color: white;
 }
 
-.topnav a.active {
-  border-bottom: 3px solid red;
+div.content {
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
 }
 </style>
 </head>
@@ -50,13 +81,15 @@ body {margin:0;}
 
 
 <div class="sticky"><div class="topnav">
-  <a class="active" href="#Home"><i class="fa fa-fw fa-home"></i>Home</a>
+  
+  
+
+<div class="sidebar">
+  <a class="active" href="#home"><i class="fa fa-fw fa-home">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
-    <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-    <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 </div>
 
 <div style="padding-left:16px">
