--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ body {
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  <a href="#">Home </a>
+  <a href="#">Courses</a>
+  <a href="#">Certificate</a>
+  <a href="#" class="right">Contact</a>
 </div>
 
 <div class="row">
