--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   
 <style>
 * {
