--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ section{
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo">DesignX</label>
+      <label class="logo">Passion Education</label>
       <ul>
         <li><a class="active" href="#">Home</a></li>
         <li><a href="#">About</a></li>
