--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@ section{
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo">Passion Education</label>
+      <label class="logo">Courses</label>
       <ul>
-        <li><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Feedback</a></li>
+        <li><a class="active" href="#"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="#"><i class="fa fa-about"></i>About</a></li>
+        <li><a href="#"><i class="fa fa-service"></i>Services</a></li>
+        <li><a href="#"><i class="fa fa-contact"></i>Contact</a></li>
+        <li><a href="#"><i class="fa fa-feedback"></i>Feedback</a></li>
       </ul>
     </nav>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>A website created by me.</p>
+  <h1>Passion Education</h1>
+  <p>Build skills with Free courses, certificates online </p>
 </div>
 
 <div class="row">
