--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@ section{
       <label class="logo">Courses</label>
       <ul>
         <li><a class="active" href="#"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="#"><i class="fa fa-about"></i>About</a></li>
-        <li><a href="#"><i class="fa fa-service"></i>Services</a></li>
-        <li><a href="#"><i class="fa fa-contact"></i>Contact</a></li>
-        <li><a href="#"><i class="fa fa-feedback"></i>Feedback</a></li>
+        <li><a href="#"><i class="fa fa-fas fa-clipboard-check"></i>About</a></li>
+        <li><a href="#"><i class="fa fa-fas fa-file-code"></i>Courses</a></li>
+        <li><a href="#"><i class="fa fa-phone-square-alt"></i>Contact</a></li>
+        <li><a href="#"><i class="fa fa-fab fa-cc-amazon-pay"></i>Donate Us</a></li>
       </ul>
     </nav>
 
