--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ nav ul li a{
   text-transform: uppercase;
 }
 a.active,a:hover{
-  background: #1b9bff;
+  background: #00ffff;
   transition: .5s;
 }
 .checkbtn{
@@ -139,7 +139,7 @@ a.active,a:hover{
     padding-left: 50px;
   }
   nav ul li a{
-    font-size: 16px;
+    font-size: 20px;
   }
 }
 @media (max-width: 858px){
