--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@ a.active,a:hover{
     left: 0;
   }
 }
+  
+  
+  
+  
+/* Style the header */
+.header {
+  padding: 80px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+}
+
+/* Increase the font size of the h1 element */
+.header h1 {
+  font-size: 40px;
+}
 
 
 </style>
