--- a/index.html
+++ b/index.html
@@ -119,6 +119,28 @@ a.active,a:hover{
 .header h1 {
   font-size: 40px;
 }
+  
+  
+  
+
+.glow {
+  font-size: 30px;
+  color: orangered;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
 
 
 </style>
@@ -141,7 +163,7 @@ a.active,a:hover{
     </nav>
 
 <div class="header">
-  <h1>Passion Education</h1>
+  <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
 </div>
 
