--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
+  font-family: 'Eater';font-size: 22px;
 }
 nav ul{
   float: right;
