--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ a.active,a:hover{
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo">Online Courses</label>
+      <label class="logo">Courses</label>
       <ul>
         <li><a class="active" href="#"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="#"><i class="fa fa-fw fa-wrench"></i>About</a></li>
