--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  font-family: 'Eater';font-size: 35px;
+  font-family: 'Frijole';font-size: 35px;
 }
 nav ul{
   float: right;
