--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   
+<link href='https://fonts.googleapis.com/css?family=Frijole' rel='stylesheet'>
+  
 <style>
 
 
