--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 <title>Page Title</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  
-  <link href='https://fonts.googleapis.com/css?family=Eater' rel='stylesheet'>
+<meta name="viewport" content="width=device-width, initial-scale=1">  
+<link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
 <style>
 
 
@@ -32,7 +30,7 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  font-family: 'Eater';font-size: 35px;
+  font-family: 'Alfa Slab One';font-size: 35px;
 }
 nav ul{
   float: right;
