--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link href='https://fonts.googleapis.com/css?family=Alfa Slab One' rel='stylesheet'>
+  
+<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
+
 <style>
 
 
@@ -30,7 +32,7 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  font-family: 'Alfa Slab One';font-size: 35px;
+  font-family: 'Allura';font-size: 35px;
 }
 nav ul{
   float: right;
