--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ label.logo{
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  font-family: 'Allura';font-size: 35px;
+  font-size: 35px;
 }
 nav ul{
   float: right;
@@ -143,7 +143,10 @@ a.active,a:hover{
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-
+  .raza{
+   font-family: 'Allura';font-size: 15px; 
+  
+  }
 
 </style>
 </head>
@@ -166,7 +169,7 @@ a.active,a:hover{
 
 <div class="header">
   <h1 class="glow">Passion Education</h1>
-  <p>Build skills with Free courses, certificates online </p>
+  <p class="raza">Build skills with Free courses, certificates online </p>
 </div>
 
 
