--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-  
-<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
+ 
 
 <style>
 
@@ -143,10 +142,7 @@ a.active,a:hover{
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-  .raza{
-   font-family: 'Allura';font-size: 25px; 
-  
-  }
+
 
 </style>
 </head>
@@ -169,7 +165,7 @@ a.active,a:hover{
 
 <div class="header">
   <h1 class="glow">Passion Education</h1>
-  <p class="raza">Build skills with Free courses, certificates online </p>
+  <p >Build skills with Free courses, certificates online </p>
 </div>
 
 
