--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 
 <style>
 
-
-  
-  *{
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ *{
   padding: 0;
   margin: 0;
   text-decoration: none;
@@ -27,12 +38,10 @@ nav{
 }
 label.logo{
   color: white;
-  
   font-size: 35px;
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  
 }
 nav ul{
   float: right;
@@ -104,9 +113,7 @@ a.active,a:hover{
   #check:checked ~ ul{
     left: 0;
   }
-}
-  
-  
+} 
   
   
 /* Style the header */
@@ -145,6 +152,38 @@ a.active,a:hover{
 }
 
 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 </style>
 </head>
 <body>
@@ -165,10 +204,20 @@ a.active,a:hover{
     </nav>
 
 <div class="header">
-  <h1 class="glow">Passion Education</h1>
-  <p >Build skills with Free courses, certificates online </p>
+  <h1>Passion Education</h1>
+  <p>Build skills with Free courses, certificates online </p>
 </div>
-
-
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 </body>
 </html>
