--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ a.active,a:hover{
     </nav>
 
 <div class="header">
-  <h1>Passion Education</h1>
+  <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
 </div>
  
