--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ nav ul li a{
   text-transform: uppercase;
 }
 a.active,a:hover{
-  background: #00ffff;
-  transition: .5s;
+  
+    border-bottom: 3px solid red;
 }
 .checkbtn{
   font-size: 30px;
