--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ a.active,a:hover{
   
 /* Style the header */
 .header {
-  padding: 120px;
+  padding: 150px;
   text-align: center;
-  background: #1abc9c;
+/*  background-image: #1abc9c; */
   color: white;
 }
 
@@ -204,6 +204,7 @@ a.active,a:hover{
     </nav>
 
 <div class="header">
+ <img src="logoback.jpg" alt="raza"></img>
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
 </div>
