--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@ a.active,a:hover{
  
  
  
+ .raza{
+ hieght:150px;
+ width:100%;
  
+ } 
  
  
  
@@ -204,7 +208,7 @@ a.active,a:hover{
     </nav>
 
 <div class="header">
- <img src="logoback.jpg" alt="raza"></img>
+ <img class="raza" src="logoback.jpg" alt="raza"></img>
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
 </div>
