--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ a.active,a:hover{
 .header {
   padding: 150px;
   text-align: center;
-/*  background-image: #1abc9c; */
+ background-image: black; 
   color: white;
 }
 
