--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ a.active,a:hover{
 .header {
   padding: 150px;
   text-align: center;
- background-image: black; 
+ background: black; 
   color: white;
 }
 
