--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ a.active,a:hover{
 <div class="header">
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
- <h2>Your Course to Success</h2>
+ <h2><b>Your Course to Success</b></h2>
 
 </div>
  
