--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ a.active,a:hover{
 /* Style the header */
 .header {
   padding: 100px;
+ font-size:20px;
   text-align: center;
  background: black; 
   color: white;
