--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ body{
   font-family: montserrat;
 }
 nav{
-   background:#AFEEEE;
-/*  background: #0082e6; */
+ 
+ background: #0082e6; 
   height: 80px;
   width: 100%;
 }
