--- a/index.html
+++ b/index.html
@@ -131,10 +131,15 @@ a.active,a:hover{
 }
   
   
+ /* Container holding the image and the text */
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
  
  
- 
- .centered {
+ .header {
   position: absolute;
   top: 50%;
   left: 50%;
