--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ a.active,a:hover{
  
  .header {
   position: absolute;
-  top: 30%;
-  left: 30%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   color:white;
 }
@@ -224,7 +224,7 @@ a.active,a:hover{
     </nav>
 
  <div class="container">
-  <img src="logoback.jpg" alt="Snow" style="width:100%;">
+  <img src="logoback.jpg" alt="Snow" style="width:100%; hieght:150px;">
  
  
 <div class="header">
