--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@ a.active,a:hover{
 <div class="header">
   <h1>Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
+ <h2>Your Course to Success</h2>
+
 </div>
  </div>
  
