--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 <style>
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+  
  *{
   padding: 0;
   margin: 0;
@@ -171,36 +158,6 @@ a.active,a:hover{
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
   }
 }
-
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
  
  
  
@@ -225,7 +182,7 @@ a.active,a:hover{
     </nav>
 
  <div class="container">
-  <img src="logoback.jpg" alt="Snow" style="width:100%; hieght:150px;">
+  <img src="logoback.jpg" alt="courses" style="width:100%; hieght:150px;">
  
  
 <div class="header">
@@ -235,16 +192,6 @@ a.active,a:hover{
 
 </div>
  </div>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+   
 </body>
 </html>
