--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a.active,a:hover{
 .header {
   padding: 80px;
   text-align: center;
- /* background: #1abc9c; */
+  background: #1abc9c; 
   color: white;
 }
 
@@ -118,14 +118,15 @@ a.active,a:hover{
 }
   
   
- /* Container holding the image and the text */
+ /*
+ Container holding the image and the text 
 .container {
   position: relative;
   text-align: center;
   color: white;
 }
- 
- 
+*/ 
+/*
  .header {
   position: absolute;
   top: 50%;
@@ -134,7 +135,7 @@ a.active,a:hover{
   color:white;
   hieght:150px;
 }
- 
+ */
  
  
  
@@ -181,9 +182,9 @@ a.active,a:hover{
       </ul>
     </nav>
 
- <div class="container">
+/* <div class="container">
   <img src="logoback.jpg" alt="courses" style="width:100%; hieght:150px;">
- 
+ */
  
 <div class="header">
   <h1>Passion Education</h1>
@@ -191,7 +192,6 @@ a.active,a:hover{
  <h2>Your Course to Success</h2>
 
 </div>
- </div>
-   
+ 
 </body>
 </html>
