--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a.active,a:hover{
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c; 
+  background: black; 
   color: white;
 }
 
