--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ a.active,a:hover{
 
  
 <div class="header">
-  <h1>Passion Education</h1>
+  <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
  <h2>Your Course to Success</h2>
 
