--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ a.active,a:hover{
   }
   a:hover,a.active{
     background: none;
-    color: #0082e6;
+   color:red;
+     /*color: #0082e6;*/
   }
   #check:checked ~ ul{
     left: 0;
