--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ nav ul li a{
   text-transform: uppercase;
 }
 a.active,a:hover{
-  background: #00ffff;
-  transition: .5s;
+  border-bottom: 3px solid red;
 }
 .checkbtn{
   font-size: 30px;
@@ -96,8 +95,7 @@ a.active,a:hover{
   }
   a:hover,a.active{
     background: none;
-   color:red;
-     /*color: #0082e6;*/
+   color: #0082e6;
   }
   #check:checked ~ ul{
     left: 0;
