--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ body{
   font-family: montserrat;
 }
 nav{
- 
- background: #0082e6; 
+ background:skyblue;
+ /*background: #0082e6; *
   height: 80px;
   width: 100%;
 }
