--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body{
   font-family: montserrat;
 }
 nav{
- background:skyblue;
+ background:#40E0D0;
  /*background: #0082e6; */
   height: 80px;
   width: 100%;
