--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ a.active,a:hover{
       </label>
       <label class="logo">Courses</label>
       <ul>
-        <li><a class="active" href="#"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="#"><i class="fa fa-fw fa-wrench"></i>About</a></li>
-        <li><a href="#"><i class="fa fa-fas fa-file-code"></i>Courses</a></li>
-        <li><a href="#"><i class="fa fa-fw fa-envelope"></i>Contact</a></li>
-        <li><a href="#"><i class="fa fa-fab fa-cc-amazon-pay"></i>Donate Us</a></li>
+        <li><a class="active" href="#"><i class="fa fa-home"></i>&nbsp;Home</a></li>
+        <li><a href="#"><i class="fa fa-fw fa-wrench"></i>&nbsp;About</a></li>
+        <li><a href="#"><i class="fa fa-fas fa-file-code"></i>&nbsp;Courses</a></li>
+        <li><a href="#"><i class="fa fa-fw fa-envelope"></i>&nbsp;Contact</a></li>
+        <li><a href="#"><i class="fa fa-fab fa-cc-amazon-pay"></i>&nbsp;Donate Us</a></li>
       </ul>
     </nav>
 
