--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@ a.active,a:hover{
       </label>
       <label class="logo">Courses</label>
       <ul>
-        <li><a class="active" href="#"><i class="fa fa-home"></i>&nbsp;Home</a></li>
-        <li><a href="#"><i class="fa fa-fw fa-wrench"></i>&nbsp;About</a></li>
-        <li><a href="#"><i class="fa fa-fas fa-file-code"></i>&nbsp;Courses</a></li>
-        <li><a href="#"><i class="fa fa-fw fa-envelope"></i>&nbsp;Contact</a></li>
+        <li><a class="active" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;Home</a></li>
+        <li><a href="#"><i class="fa fa-fw fa-wrench"></i>&nbsp;&nbsp;About</a></li>
+        <li><a href="#"><i class="fa fa-fas fa-file-code"></i>&nbsp;&nbsp;Courses</a></li>
+        <li><a href="#"><i class="fa fa-fw fa-envelope"></i>&nbsp;&nbsp;Contact</a></li>
         <li><a href="#"><i class="fa fa-fab fa-cc-amazon-pay"></i>&nbsp;Donate Us</a></li>
       </ul>
     </nav>
