--- a/index.html
+++ b/index.html
@@ -103,6 +103,23 @@ a.active,a:hover{
   }
 } 
   
+ 
+ 
+ /* background image*/
+ 
+ .image{
+ 
+ 
+.hero-image {
+  background-image: url("logonew.png");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+ 
+ }
   
 /* Style the header */
 .header {
@@ -163,13 +180,13 @@ a.active,a:hover{
     </nav>
 
 
- 
+ <div class="image">
 <div class="header">
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
  <h2>Your Course to Success</h2>
 
 </div>
- 
+ </div>
 </body>
 </html>
