--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ a.active,a:hover{
  
  
 .hero-image {
-  background-image: url("logonew.png");
+  /* background-image: url("logonew.png");*/
   background-color: #cccccc;
   height: 500px;
   background-position: center;
@@ -181,6 +181,7 @@ a.active,a:hover{
 
 
  <div class="image">
+  <img src="logonew.png"></img>
 <div class="header">
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
