--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ a.active,a:hover{
 
 
  <div class="image">
-  <img src="logonew.png"></img>
+  <img src="logo.png"></img>
 <div class="header">
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
