--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ a.active,a:hover{
 /* Style the header */
 .header {
   padding: 80px;
-  text-align: center;
+  text-align: left;
   
   color: white;
 }
