--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Passion Education</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">  
  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
