--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ form.example::after {
       <label class="logo">Courses</label>
       <ul>
         <li><a class="active" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="IF_ELSE_STATEMENT.ipynb">About</a></li>
         <li><a href="#">Courses</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Feedback</a></li>
