--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@ form.example::after {
   display: table;
 }
  
+ .back{
+    width:100%;
+    position:absolute;
+    z-index: -1;
+    height: 400px;
+}
+ 
 </style>
 </head>
 <body>
@@ -194,6 +201,7 @@ form.example::after {
     </nav>
  
 <div class="header">
+     <img class="back" src="logo2.jpg" alt="free courses"></img>
        <p>&nbsp;&nbsp;</p>   <p>&nbsp;&nbsp;</p>
   <h1 class="glow">Passion Education</h1>
   <p>Build skills with Free courses, certificates online </p>
