--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body{
   font-family: montserrat;
 }
 nav{
- background:DarkSlateBlue;
+ background:DarkSlateBlue; 
  height: 80px;
  width: 100%;
  position: fixed;
@@ -82,7 +82,7 @@ a.active,a:hover{
     width: 100%;
     height: 100vh;
 
-   background:LightSlateGray;
+  background:LightSlateGray; 
     top: 80px;
     left: -100%;
     text-align: center;
@@ -109,7 +109,7 @@ a.active,a:hover{
 .header {
   padding: 80px;
   text-align: center;
-  background: #AFEEEE;
+ /* background: #AFEEEE; */
    
   
   color: black;
