--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ form.example::after {
       <label for="check" class="checkbtn">
         <i class="fas fa-bars"></i>
       </label>
-      <label class="logo">Courses</label>
+      <label class="logo">Online Courses</label>
       <ul>
         <li><a class="active" href="#"><i class="fa fa-home"></i>&nbsp;&nbsp;Home</a></li>
         <li><a href="index2.html">About</a></li>
