--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ a:hover .fa-youtube{
     </nav>
             <div class="content">
             <div class="textBox">
-                <h3 style="font-weight:900;">Learn  TO  Code  For <br><span>Free</span></h3>
+                <h3 style="font-weight:900;">Learn Code  For <br><span>Free</span></h3>
                  <h1 style="color:;font-weight:600;padding-bottom:10px;">Top Online Courses</h1>
                 <p>Learn to code with our beginner-friendly tutorials and examples. Read tutorials, try examples, write programs, and learn to code. </p>
                <p style="color:LightSlateGray;">" Your Course to Success "</p>
