--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Vidaloka&display=swap" rel="stylesheet">
  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
- <link rel="stylesheet" href="index.css">
+ <link rel="stylesheet" href="indexcss.css">
  <title>Learn to code for free & certificate</title>
 </head>
 <body>
