--- a/web-editor.html
+++ b/web-editor.html
@@ -103,31 +103,32 @@ h6:hover{
 
 @media (max-width: 858px)
 {
+    
       #code
     {
-        height:520px;
-        font-size: 15px;
-        width:96%;
-        border-right:none;
+        height:500px;
+        font-size: 13px;
+        width:100%;
+        border-bottom:5px solid red;
         color:red;
         padding: 5px;
-        box-shadow: 10px 10px 10px 5px rgba(0,0,0,0.4);
-        margin:5px;
-        border:none;
+        box-shadow:none;
+        margin:0px;
         resize: none;
         float: left;
    }
+
  
    .editor #output
     {
         float:right;
-        height:520px;
-        width:98%;
-        border:none;
+        height:500px;
+        width:100%;
+        border-bottom:5px solid red;
         background-color: white;
-        box-shadow:10px 10px 10px 5px rgba(0,0,0,0.4);
-        margin:1px;
-    }   
+        box-shadow:none;
+        margin:0px;
+    }  
 }
 </style>
 <body>
